# Level-A-Research-Paper-Implementations-

./: .gitignore  DATASHEET.md  PLAN.md  README.md  SETUP.md  croissant.yaml  neurips2027_ideas.docx  pyproject.toml
configs/scenarios/: market_bertrand_2f.yaml  oversight_aligned.yaml
experiments/: generate_dataset.py
src/multicollude/: cli.py
src/multicollude/agents/: anthropic_agent.py  openai_agent.py
src/multicollude/core/: agent.py  communication.py  engine.py  incentives.py  trace.py
src/multicollude/data/: generator.py
src/multicollude/detection/: __init__.py  evaluation.py
src/multicollude/metrics/: collusion.py  correlation.py  covert.py  oversight.py
src/multicollude/scenarios/market/: bertrand.py
src/multicollude/scenarios/oversight/: reviewer.py
tests/: conftest.py
tests/integration/: test_market.py
tests/unit/: test_detection.py  test_engine.py  test_metrics.py
