[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multicollude"
version = "0.1.0"
description = "Benchmark for multi-agent collusion and correlated failure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Swapnanil Adhikary", email = "adhikaryswapnanil@gmail.com" }
]
keywords = ["multi-agent", "collusion", "correlated-failure", "benchmark", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "google-generativeai>=0.3",
    "transformers>=4.35",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "huggingface-hub>=0.19",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]

[project.scripts]
multicollude = "multicollude.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multicollude"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
